[package]
name = "sp-allocator"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Collection of allocator implementations."
documentation = "https://docs.rs/sc-allocator"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
thiserror = { workspace = true, optional = true }
# sp-core.workspace = true
# sp-core.default-features = true
# sp-wasm-interface.workspace = true
# sp-wasm-interface.default-features = true
sp-wasm-interface-common.workspace = true
sp-wasm-interface-common.default-features = true

[features]
default = [ "std" ]
std = [ "codec/std", "log/std", "sp-wasm-interface-common/std", "thiserror" ]
