[package]
name = "sc-executor-wasmi"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "This crate provides an implementation of `WasmRuntime` that is baked by wasmi."
documentation = "https://docs.rs/sc-executor-wasmi"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
wasmi = { git = "https://github.com/gear-tech/wasmi", branch = "v0.13.2-sign-ext", features = ["virtual_memory"] }
sc-executor-common = { workspace = true }
sp-allocator = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-wasm-interface = { workspace = true }
